fix an extra space in the box-shadow rule

--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ body {
   padding-left: 9rem;
   background-color: rgba(255, 255, 255, 0.55);
   border-radius: .3rem;
-  box-shadow: 0 3rem 6rem rgba #000, 0.1;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   font-size: 1.6rem;
   margin: 0 auto;
   transform: skewX(-15deg); }
